--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "carbon-components": "^10.10.3",
+    "carbon-components-react": "^7.10.3",
+    "carbon-icons": "^7.0.7",
     "firebase": "^7.13.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
