Update protected route logic

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "carbon-components-react": "^7.10.3",
     "carbon-icons": "^7.0.7",
     "firebase": "^7.13.2",
+    "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
